fixed alignment after left menyú got some padding

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -892,7 +892,7 @@ code[class|='language']::before {
     .main { 
         float: none;
         width: 100%;
-        padding-left: 425px;
+        padding-left: 430px;
     }
     
     /* make toggle look checked as default */
